docs: 添加打包发布说明（uber JAR + jpackage 便携 EXE）